--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -9,64 +9,50 @@
                 </button>
                 <div class="outer-circle intro-outer-circle">
                     <div class="inner-circle intro-inner-circle">
-                        <div *ngFor="let level of createRange(3); let idx=index;" class="arc level{{idx+1}}" [ngClass]="stage>1 || (stage===1 && activity>=idx+1) ? 'completed' : ''"></div>
-                        <div class="activity">{{stage>1 ? 3 : (stage<1 ? 0 : activity)}}/3</div>
+                        <div *ngFor="let level of createRange(3); let idx=index;" class="arc level{{idx+1}}" [ngClass]="calculateArcClass(1, idx)"></div>
+                        <div class="activity">{{calculateDisplayedActivity(1)}}/3</div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="menu-button">
-                <img class="hex" src="../../assets/img/malaria-101.png" (click)="navigateToPage('/malaria-101')">
-                <button class="but malaria-btn" (click)="navigateToPage('/malaria-101')">
+                <img class="hex" [src]="calculateButtonBackground(2, 'malaria-101')" (click)="navigateToPage('/malaria-101')">
+                <button [ngClass]="calculateButtonClasses(2, 'malaria-btn')" (click)="navigateToPage('/malaria-101')" [disabled]="!checkStageStatus(2)">
                     {{language?.malaria101.heading}}
                 </button>
-                <div class="outer-circle malaria-outer-circle">
-                    <div class="inner-circle malaria-inner-circle">
-                        <div *ngFor="let level of createRange(3); let idx=index" class="arc level{{idx+1}}" [ngClass]="stage>2 || (stage===2 && activity>=idx+1) ? 'completed' : ''"></div>
-                        <div class="activity">{{stage>2 ? 3 : (stage<2 ? 0 : activity)}}/3</div>
+                <div [ngClass]="calculateOuterClasses(2, 'malaria-outer-circle')">
+                    <div [ngClass]="calculateInnerClasses(2, 'malaria-inner-circle')">
+                        <div *ngFor="let level of createRange(3); let idx=index" class="arc level{{idx+1}}" [ngClass]="calculateArcClass(2, idx)"></div>
+                        <div class="activity">{{calculateDisplayedActivity(2)}}/3</div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="menu-button">
-                <img class="hex" src="../../assets/img/meds.png" (click)="navigateToPage('/meds-n-labels')">
-                <button class="but med-btn" (click)="navigateToPage('/meds-n-labels')">
+                <img class="hex" [src]="calculateButtonBackground(3, 'meds')" (click)="navigateToPage('/meds-n-labels')" >
+                <button [ngClass]="calculateButtonClasses(3, 'med-btn')" (click)="navigateToPage('/meds-n-labels')" [disabled]="!checkStageStatus(3)">
                     {{language?.medsNLabels.heading}}
                 </button>
-                <div class="outer-circle med-outer-circle">
-                    <div class="inner-circle med-inner-circle">
-                        <div *ngFor="let level of createRange(3); let idx=index" class="arc level{{idx+1}}" [ngClass]="stage>3 || (stage===3 && activity>=idx+1) ? 'completed' : ''"></div>
-                        <div class="activity">{{stage>3 ? 3 : (stage<3 ? 0 : activity)}}/3</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="menu-button">
-                <img class="hex" src="../../assets/img/pc-policy.png" (click)="navigateToPage('/introduction/activity-2')">
-                <button class="but pc-policy-btn" (click)="navigateToPage('/introduction/activity-2')">
-                    {{language?.peaceCorps.heading}}
-                </button>
-                <div class="outer-circle pc-policy-outer-circle">
-                    <div class="inner-circle pc-policy-inner-circle">
-                        <div *ngFor="let level of createRange(3); let idx=index" class="arc level{{idx+1}}" [ngClass]="stage>4 || (stage===4 && activity>=idx+1) ? 'completed' : ''"></div>
-                        <div class="activity">{{stage>4 ? 3 : (stage<4 ? 0 : activity)}}/3</div>
+                <div [ngClass]="calculateOuterClasses(3, 'med-outer-circle')">
+                    <div [ngClass]="calculateInnerClasses(3, 'med-inner-circle')">
+                        <div *ngFor="let level of createRange(3); let idx=index" class="arc level{{idx+1}}" [ngClass]="calculateArcClass(3, idx)"></div>
+                        <div class="activity">{{calculateDisplayedActivity(3)}}/3</div>
                     </div>
                 </div>
             </div>
         </div>
       <div class="row">
         <div class="menu-button" (click)="navigateToPage('/prevent')">
-          <img class="hex" src="../../assets/img/prevent.png">
-          <button class="but malaria-btn" (click)="navigateToPage('/prevent')">
+          <img class="hex" [src]="calculateButtonBackground(4, 'prevent')">
+          <button [ngClass]="calculateButtonClasses(4, 'malaria-btn')" (click)="navigateToPage('/prevent')" [disabled]="!checkStageStatus(4)">
             {{language?.prevention.heading}}
           </button>
-          <div class="outer-circle prevent-outer-circle">
-            <div class="inner-circle prevent-inner-circle">
-              <div *ngFor="let level of createRange(3); let idx=index" class="arc level{{idx+1}}" [ngClass]="stage===6 && activity>=idx+1 ? 'completed' : ''"></div>
-              <div class="activity">{{stage===6 ? activity : 0}}/3</div>
+          <div [ngClass]="calculateOuterClasses(4, 'prevent-outer-circle')">
+            <div [ngClass]="calculateInnerClasses(4, 'prevent-inner-circle')">
+              <div *ngFor="let level of createRange(3); let idx=index" class="arc level{{idx+1}}" [ngClass]="calculateArcClass(4, idx)"></div>
+              <div class="activity">{{calculateDisplayedActivity(4)}}/3</div>
             </div>
           </div>
         </div>
@@ -79,8 +65,8 @@
                 </button>
                 <div class="outer-circle unlocked-outer-circle">
                     <div class="inner-circle unlocked-inner-circle">
-                        <div *ngFor="let level of createRange(3); let idx=index" class="arc level{{idx+1}}" [ngClass]="stage===5 && activity>=idx+1 ? 'completed' : ''"></div>
-                        <div class="activity">{{stage===5 ? activity : 0}}/3</div>
+                        <div *ngFor="let level of createRange(3); let idx=index" class="arc level{{idx+1}}" [ngClass]="calculateArcClass(5, idx)"></div>
+                        <div class="activity">{{calculateDisplayedActivity(5)}}/3</div>
                     </div>
                 </div>
             </div>
